# speech_to_text

DataProcessingTask-01/: .gitignore  CMakeLists.txt  DataProcessingTask.cpp  DataProcessingTask.h  README.md  main.py  setup.bat
audio_systems/: .gitignore  CMakeLists.txt  README.md  audio_async.cpp  audio_async.hpp  audio_decoder.cpp  audio_decoder.hpp  main.cpp
audio_systems/pytests/: audio.py  main.py
benchmark/: .gitignore  CMakeLists.txt  CMakeSettings.json  instrumentor.cpp  instrumentor.hpp  main.cpp
feature_extractor/: .gitignore  .gitmodules  CMakeLists.txt  README.md  feature_extractor.cpp  feature_extractor.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
feature_extractor/pytest/: feature_extractor.py  main.py
whisper/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  whisper_fast.cpp  whisper_fast.hpp  whisper_stream.cpp  whisper_stream.hpp
whisper.cpp/examples/command/: README.md
whisper.cpp/examples/main/: README.md
whisper.cpp/examples/stream/: README.md
whisper.cpp/examples/talk/: README.md
